--- a/PFD_Assignment/wwwroot/css/site.css
+++ b/PFD_Assignment/wwwroot/css/site.css
@@ -751,3 +751,9 @@ textarea {
     display: none; /* Initially hide the container */
     position: absolute;
 }
+
+.comments-container{
+    outline-style: solid;
+    outline-width: 2px;
+    padding: 5px;
+}
