--- a/PFD_Assignment/Views/Shared/_Layout.cshtml
+++ b/PFD_Assignment/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
             &copy; 2023 -  SG HandBook - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
