--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -31,3 +31,11 @@
         <partial name="~/Views/Guide/_ViewGuides.cshtml" model="@Model" />
     </div>
 </div>
+
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <script>
+        alert('@TempData["SuccessMessage"]');
+    </script>
+}
