--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
     <div class="home">
         <img class="bgimg" src="~/images/sgbackground.jpg"></img>
         <div class="content">
-            <h2 id="title" class="title">Welcome to SG Handbook</h2>
-            <p class="para" , style="font-weight: bold;">
-                You have questions, we have the answers
+            <h2 id="title" class="title" style="font-size:50px"><b>SG Handbook</b></h2>
+            <p class="para" style="font-size:23px;">
+                A simple one stop handbook for the elderly
             </p>
 
         </div>
@@ -19,7 +19,8 @@
             <b>
                 <h2 id="title" class="title">About Us</h2>
                 <p class="aboutPara">
-                    We are SG Handbook, a one stop web portal application that aims to help you answer any questions you may have.
+                    We are SG Handbook, a simple one stop handbook that aims to help you answer any questions you may have.
+                     If you have questions, we have the answers.
                 </p>
                 <h3 id="title" class="title">Contact</h3>
                 <p class="aboutContact">
