--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -33,14 +33,16 @@
                         Downvotes: @item.Downvote.ToString()
                     </div>
                 </div>
+                
             </div>
         }
+        <hr class="solid" />
     </div>
 }
 
 
 
-<hr class="solid" />
+
 
 <h2 class="PageTitle" style="font-weight:bold; font-size:60px">Guides</h2>
 
@@ -82,6 +84,6 @@
 }
 else
 {
-		<span style="color:red">No record found!</span>
+    <span style="color: black;font-size: 50px; font-weight: bold;">No guides found!</span>
 }
  
