--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -14,7 +14,7 @@
         <h2 style="padding-left: 10px;">Filter</h2>
         <hr style="border-top: dotted 2px; margin-left: 10px;" />
 
-        <div class="searchbarguide">
+     <div class="searchbarguide">
             @using (Html.BeginForm("Index", "Guide", FormMethod.Post))
             {
                 <table id="Post">
@@ -31,12 +31,13 @@
                         </td>
 
                         <td>
-                            <input type="submit" value="Search" style="background-color:darkred;color:white; padding:5px;border-radius: 10px;border:none" />
+                            <input type="submit" value="Search" class="btn btn-primary" />
                         </td>
                     </tr>
                 </table>
             }
-        </div>
+        </div> 
+        
         </br> 
 
         <button type="button" class="btn btn-default btn-lg btn-block " style="width: 100%; " href="#" id="sort-newest">
@@ -62,3 +63,11 @@
 
     </div>
 </div>
+
+
+@if (TempData["Message"] != null)
+{
+    <script>
+        alert('@TempData["Message"]');
+    </script>
+}
