--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -11,7 +11,7 @@
 <form asp-action="Create" method="post" onsubmit="return validateContent()">
 
 	<fieldset class="FormContent">
-		<div class="row mb-3 create-fields">
+		<div class="row mb-3 create-fields" style="margin-right:100px;">
 			<label asp-for="PostTitle"
 				   class="col-sm-3 col-form-label" ></label>
 			<div class="col-sm-9 col-md-5">
@@ -31,34 +31,28 @@
 		</div>
 		<div class="row mb-3 create-fields">
 			<label asp-for="PostContent"
-				   class="col-sm-3 col-form-label"></label>
+				   class="col-sm-3 col-form-label" id="PostContent"></label>
 			<div class="col-sm-9 col-md-5" style="display: flex; flex-direction: column; align-items: flex-start;">
 				<textarea asp-for="PostContent" class="form-control" style="flex-grow: 1; box-sizing: border-box; height: 100px"></textarea>
 				<span asp-validation-for="PostContent" class="text-danger"></span>
 			</div>
+			
 	</div>
-		
-		<div id="apiKeyContainer" data-api-key="@ViewBag.ApiKey">
-			<button type="button" onclick="validatePostContent()">Validate</button>
-		</div>
+		<div id="postContentValidation"></div>
 		
 		
 		
 
 		
 		<div class="row mb-3">
-            <div class="col-sm-9 offset-sm-3">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="col-sm-6 offset-sm-6">
+				<div id="apiKeyContainer" data-api-key="@ViewBag.ApiKey">
+					<button type="button" class="btn btn-success" onclick="validatePostContent()">Validate</button> <input type="submit" value="Create" class="btn btn-primary" id="submitButton" disabled /> <button asp-action="Index" class="btn btn-danger">Return back</button>
+				</div>
             </div>
         </div>
 	</fieldset>
 </form>
-
-<div class="back-to-list-button">
-			
-	<a asp-action="Index">Back to List</a>
-
-</div>
 
 
 
