--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -11,7 +11,7 @@
 <form asp-action="Create" method="post" onsubmit="return validateContent()">
 
 	<fieldset class="FormContent">
-		<div class="row mb-3 create-fields" style="margin-right:100px;">
+		<div class="row mb-3 create-fields">
 			<label asp-for="PostTitle"
 				   class="col-sm-3 col-form-label" ></label>
 			<div class="col-sm-9 col-md-5">
