--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -36,9 +36,10 @@
 				<textarea asp-for="PostContent" class="form-control" style="flex-grow: 1; box-sizing: border-box; height: 100px"></textarea>
 				<span asp-validation-for="PostContent" class="text-danger"></span>
 			</div>
+			<div id="postContentValidation" class="text-danger"></div>
 			
 	</div>
-		<div id="postContentValidation"></div>
+		
 		
 		
 		
