--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -7,6 +7,8 @@
 
 <div class="row">
     <div class="col-sm-3">
+        <div class="position-sticky" style="position: sticky;top:0px;">
+        <h2 hidden>Guides</h2>
         <h2 style="padding-left: 10px;">Create a guide</h2>
         <hr style="border-top: dotted 2px; margin-left: 10px;" />
         <a asp-action="Create" class="createguide-button">Create New Guide</a>
@@ -14,7 +16,7 @@
         <h2 style="padding-left: 10px;">Filter</h2>
         <hr style="border-top: dotted 2px; margin-left: 10px;" />
 
-     <div class="searchbarguide">
+        <div class="searchbarguide">
             @using (Html.BeginForm("Index", "Guide", FormMethod.Post))
             {
                 <table id="Post">
@@ -51,7 +53,7 @@
         <button type="button" class="btn btn-default btn-lg btn-block" style="width: 100%; " href="#" id="sort-mostliked">
             Sort Most to Least Liked
         </button>
-
+        </div>
 
         
 
