success messagfe (comments)

--- a/PFD_Assignment/Views/Guide/GuideDetails.cshtml
+++ b/PFD_Assignment/Views/Guide/GuideDetails.cshtml
@@ -185,7 +185,7 @@
 @if (TempData["SuccessMessage"] != null)
 {
     <script>
-        alert('@TempData["VoteMessage"]');
+        alert('@TempData["SuccessMessage"]');
     </script>
 }
 
