--- a/PFD_Assignment/Views/Guide/GuideDetails.cshtml
+++ b/PFD_Assignment/Views/Guide/GuideDetails.cshtml
@@ -102,12 +102,12 @@
 </div>-->
 
 <div id="myContainer" class="container">
-    <button class="fullwidth" style="display: block; background-color: #fafafa; text-align: left; padding-left: 10px;" onclick="toggleComments()">
+    <button class="fullwidth" style="display: block; background-color: #fafafa; text-align: left; padding-left: 10px; font-size:23px;" onclick="toggleComments()">
         Comments
     </button>
 
     <div class="comments-container" style="display:none;" id="commentsSection">
-        <h2>Leave Us a Comment</h2>
+        <h5><b>Leave Us a Comment</b></h5>
         <form asp-action="CreateComment" asp-route-postid="@Model.Post.PostID" style="display:none;" id="commentForm">
             <textarea name="comment" placeholder="Add Your Comment" style=""></textarea>
             <div class="btn">
@@ -115,7 +115,7 @@
                 <button type="button" id="clear" href="#" onclick="hideComments()">Cancel</button>
             </div>
         </form>
-        <h2>Comments</h2>
+        <h5><b>Comments</b></h5>
         @foreach (Comments comment in Model.CommentList)
         {
             <div>
