added multi-language feature

--- a/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
@@ -39,7 +39,25 @@
                     <!-- A link for logging out user -->
                     <a class="nav-link" href="~/Home/LoginPage">Login/Sign Up</a>
                 </li>
+                
+                <div class="fontButtons">
+                    <span class="fBtn">A</span>
+                    <span class="fBtn">A</span>
+                    <span class="fBtn">A</span>
+                </div>
+                <div id="google_translate_element">
+                
+                </div>
             </ul>
         </div>
     </div>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                { pageLanguage: 'en' },
+                'google_translate_element'
+            );
+        }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </nav>
