--- a/PFD_Assignment/Views/Shared/_Mainpage.cshtml
+++ b/PFD_Assignment/Views/Shared/_Mainpage.cshtml
@@ -55,7 +55,19 @@
                     <!-- A link for logging out user -->
                     <a class="nav-link" href="~/Home/LogOut">Log Out</a>
                 </li>
+                <div id="google_translate_element">
+
+                </div>
             </ul>
         </div>
     </div>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                { pageLanguage: 'en' },
+                'google_translate_element'
+            );
+        }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </nav>
