--- a/PFD_Assignment/Views/Guide/GuideDetails.cshtml
+++ b/PFD_Assignment/Views/Guide/GuideDetails.cshtml
@@ -74,6 +74,12 @@
         display: block;
     }
 
+
+    iframe {
+        width: 100%;
+        aspect-ratio: 16 / 9;
+    }
+
 </style>
 
 <div id="myContainer" class="container">
