--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PFD_Assignment.Models.PostViewModel>
 
 
-
+<!-- Featured Posts -->
 @if (Model.ToList().Count > 0)
 {
     <div class="guidecontent" id="guidecontent2">
@@ -46,7 +46,7 @@
 
 <h2 class="PageTitle" style="font-weight:bold; font-size:60px">Guides</h2>
 
-
+<!-- All Posts -->
 @if (Model.ToList().Count > 0)
 {
     <div class="guidecontent" id="guidecontent">
