--- a/PFD_Assignment/Views/Shared/_Mainpage.cshtml
+++ b/PFD_Assignment/Views/Shared/_Mainpage.cshtml
@@ -55,29 +55,27 @@
                     <!-- A link for logging out user -->
                     <a class="nav-link" href="~/Home/LogOut">Log Out</a>
                 </li>
+                <li class="nav-item">
+                    <div class="fontbuttongrp">
+                        <button class="fontButton" onclick="changeFontSize(1.05)">+A</button>
+                        <button class="fontButton" onclick="changeFontSize(0.95)">-A </button>
+                        <script>
+                            function changeFontSize(newSize) {
+                                var allTextElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, span, div, a, li, td, th');
 
-                <div class="sizeBtn">
-                    <button class="fontButton" style="margin-top: 10px;" onclick="changeFontSize(1.05)">+A</button>
-                    <span style="margin-right: 10px"></span>
-
-                    <button class="fontButton" onclick="changeFontSize(0.95)">-A</button>
-                    <span style="margin-right: 10px"></span>
-                    <script>
-                        function changeFontSize(newSize) {
-                            var allTextElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, span, div, a, li, td, th');
-
-                            allTextElements.forEach(function (element) {
-                                var currentSize = parseFloat(window.getComputedStyle(element, null).getPropertyValue('font-size'));
-                                var newSizeValue = currentSize * newSize;
-                                element.style.fontSize = newSizeValue + "px";
-                            });
-                        }
-                    </script>
-                </div>
-
-                <div id="google_translate_element">
-
-                </div>
+                                allTextElements.forEach(function (element) {
+                                    var currentSize = parseFloat(window.getComputedStyle(element, null).getPropertyValue('font-size'));
+                                    var newSizeValue = currentSize * newSize;
+                                    element.style.fontSize = newSizeValue + "px";
+                                });
+                            }
+                        </script>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div id="google_translate_element">
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
@@ -91,3 +89,34 @@
     </script>
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </nav>
+
+<style>
+    .fontbuttongrp {
+        display: flex;
+        border-radius: 25px; /* This creates the rounded corners for the container */
+        overflow: hidden; /* Ensures child elements do not spill outside the border */
+    }
+
+    .fontButton {
+        flex: 1; /* Ensures buttons have equal width */
+        padding: 10px 20px;
+        border: none;
+        background-color: lightgray; /* The background color for buttons; use your own color */
+        color: black; /* Text color for buttons */
+        cursor: pointer;
+        border-right: 1px solid #000;
+    }
+
+        .fontButton:hover {
+            background-color: grey;
+        }
+
+
+    .nav-item {
+        margin-right: 10px !important; /* Creates space between nav items */
+    }
+
+    #google_translate_element {
+        margin-left: 10px; /* Creates space between the font buttons and translate element */
+    }
+</style>
