--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -27,7 +27,7 @@
         <div class="row mb-3 create-fields">
             <label asp-for="VideoLink" class="col-sm-3 col-form-label"></label>
             <div class="col-sm-9 col-md-5">
-                <input asp-for="VideoLink" class="form-control" />
+                <input asp-for="VideoLink" class="form-control" data_val ="false" />
                 <span asp-validation-for="VideoLink" class="text-danger"></span>
             </div>
         </div>
