create announcement wip (admin side)

--- a/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
@@ -29,18 +29,13 @@
             me-auto: margin-end, i.e., right margin, auto-adjusted -->
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Home/Index">
-                        Home
+                    <a class="nav-link" href="~/Admin/CreateAnnounce">
+                        Announcements
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="~/Guide/Index">
                         Guides
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="~/Home/Index#aboutUs">
-                        About Us
                     </a>
                 </li>
             </ul>
