create announcement done (need do ui)

--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<PFD_Assignment.Models.PostViewModel>
-
-
+<!--
+ <img class="bgimg" src="~/images/sgbackground.jpg"></img>
+ -->
 <!-- Featured Posts -->
 @if (Model.ToList().Count > 0)
 {
@@ -86,4 +87,3 @@ else
 {
     <span style="color: black;font-size: 50px; font-weight: bold;">No guides found!</span>
 }
- 
