--- a/PFD_Assignment/Views/Shared/_Layout.cshtml
+++ b/PFD_Assignment/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         }
         @if (Context.Session.GetString("Role") == "Admin")
         {
-            @await Html.PartialAsync("_Mainpage.cshtml")
+            @await Html.PartialAsync("_AdminMenu.cshtml")
         }
         else
         {
