--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -37,6 +37,7 @@
                 <textarea asp-for="PostContent" class="form-control" id="postContentInput" style="flex-grow: 1; box-sizing: border-box; height: 100px"></textarea>
                 <span asp-validation-for="PostContent" class="text-danger"></span>
             </div>
+            <p style="font-size: smaller;">Please validate content before creating a guide</p>
             <div id="postContentValidation" class="text-danger"></div>
         </div>
 
