--- a/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
@@ -29,7 +29,7 @@
             me-auto: margin-end, i.e., right margin, auto-adjusted -->
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Admin/CreateAnnounce">
+                    <a class="nav-link" href="~/Home/AdminMain">
                         Announcements
                     </a>
                 </li>
