--- a/PFD_Assignment/Views/Admin/CreateAnnounce.cshtml
+++ b/PFD_Assignment/Views/Admin/CreateAnnounce.cshtml
@@ -1,29 +1,37 @@
 ﻿@model PFD_Assignment.Models.Announcements
 
-<h4>Announcements</h4>
+
+<h4 class="PageTitle">Create Announcements</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateAnnounce">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="AnnouncementTitle" class="control-label"></label>
+
+<form asp-action="CreateAnnounce">
+
+    <fieldset class="FormContent">
+        <div class="row mb-3 create-fields">
+            <label asp-for="AnnouncementTitle" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-9 col-md-5">
                 <input asp-for="AnnouncementTitle" class="form-control" />
                 <span asp-validation-for="AnnouncementTitle" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="AnnouncementContent" class="control-label"></label>
+        </div>
+        <div class="row mb-3 create-fields">
+            <label asp-for="AnnouncementContent" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-9 col-md-5">
                 <input asp-for="AnnouncementContent" class="form-control" />
                 <span asp-validation-for="AnnouncementContent" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+        </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+        <div class="row mb-3">
+            <div class="col-sm-5 offset-sm-5">
+                <input type="submit" value="Create" class="btn btn-primary" id="submitButton" />
+                <a href="@Url.Action("AdminMain", "Home")" class="btn btn-danger">
+                    Return back
+                </a>
+            </div>
+        </div>
+
+
+    </fieldset>
+</form>
 
