--- a/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Guide/Index">
+                    <a class="nav-link" href="~/Admin/PinGuides">
                         Guides
                     </a>
                 </li>
@@ -49,7 +49,7 @@
                 <li class="nav-item">
                     <div class="fontbuttongrp">
                         <button class="fontButton" onclick="changeFontSize(1.05)">+A</button>
-                        <button class="fontButton" onclick="changeFontSize(0.95)">-A </button>
+                        <button class="fontButton" onclick="changeFontSize(0.95)">-A</button>
                         <script>
                             function changeFontSize(newSize) {
                                 var allTextElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, span, div, a, li, td, th');
