--- a/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
+++ b/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
@@ -9,7 +9,7 @@
 @if (Model?.Count() > 0)
 {
     <div class="guidecontent" id="guidecontent">
-        @foreach (var item in Model.Skip(3))
+        @foreach (var item in Model)
         {
             <div class="guides" id="guides">
                 <div>
@@ -19,7 +19,6 @@
                     <p class="guidePara">
                         Description: @item.AnnouncementContent.ToString()
                     </p>
-
                 </div>
 
                 <div class="guidebuttonposition" id="guidebuttonposition">
@@ -30,11 +29,10 @@
                     </a>
                 </div>
             </div>
-
         }
     </div>
 }
 else
 {
-    <span style="color: black;font-size: 20px; font-weight: bold;">No announcements found!</span>
+    <span style="color: black; font-size: 20px; font-weight: bold;">No announcements found!</span>
 }
