--- a/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
+++ b/PFD_Assignment/Views/Admin/_ViewAnnouncements.cshtml
@@ -6,7 +6,7 @@
 
 <p><a asp-controller="Admin" asp-action="CreateAnnounce">Create an Announcement</a></p>
 
-@if (Model?.Count() > 0)
+@if (Model.Count() > 0)
 {
     <div class="guidecontent" id="guidecontent">
         @foreach (var item in Model)
