--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PFD_Assignment.Models.PostViewModel>
-<!--
- <img class="bgimg" src="~/images/sgbackground.jpg"></img>
- -->
+
+ <img class="bgimg" src="~/images/sgbackground2.jpg"></img> 
+
 <!-- Featured Posts -->
 @if (Model.ToList().Count > 0)
 {
