--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<PFD_Assignment.Models.PostViewModel>
+﻿@model PFD_Assignment.Models.PostIndexViewModel
+
 
 @{
     ViewData["Title"] = "Index";
